{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 40,
  "lineage": "8c9b9dca-7459-7041-add1-60c5273e801b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c5e030f74651050",
            "arn": "arn:aws:ec2:us-west-2:290455323267:instance/i-0ad1c12cf1587c3f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad1c12cf1587c3f0",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "yik-nl-oregon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc3f69439f13f7d3",
            "private_dns": "ip-10-0-0-64.us-west-2.compute.internal",
            "private_ip": "10.0.0.64",
            "public_ip": "52.40.206.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:290455323267:key/c18a3d2f-cade-439b-b1ef-1f803ec5248e",
                "throughput": 0,
                "volume_id": "vol-0a46b852c04622b99",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bbcfd1c5373f462b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecab6c968eb14cd1",
            "tags": {
              "Name": "terraform-demo-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bbcfd1c5373f462b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:290455323267:internet-gateway/igw-01a22d29ea310441c",
            "id": "igw-01a22d29ea310441c",
            "owner_id": "290455323267",
            "tags": {
              "Name": "terraform-demo-igw"
            },
            "vpc_id": "vpc-0241f35778ba6af1c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01976d2f06cde4446",
            "owner_id": "290455323267",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a22d29ea310441c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-demo-public-rt"
            },
            "vpc_id": "vpc-0241f35778ba6af1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e515b208117a046e",
            "route_table_id": "rtb-01976d2f06cde4446",
            "subnet_id": "subnet-0ecab6c968eb14cd1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:290455323267:security-group/sg-0bbcfd1c5373f462b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbcfd1c5373f462b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "290455323267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-demo-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0241f35778ba6af1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:290455323267:subnet/subnet-0ecab6c968eb14cd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ecab6c968eb14cd1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290455323267",
            "tags": {
              "Name": "terraform-demo-public-a"
            },
            "vpc_id": "vpc-0241f35778ba6af1c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:290455323267:vpc/vpc-0241f35778ba6af1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0995be2cafbb4db1a",
            "default_route_table_id": "rtb-0a53cd685d15f8777",
            "default_security_group_id": "sg-0f7b476b049086203",
            "dhcp_options_id": "dopt-e1afdc98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0241f35778ba6af1c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a53cd685d15f8777",
            "owner_id": "290455323267",
            "tags": {
              "Name": "terraform-demo-main-vpc"
            }
          }
        }
      ]
    }
  ]
}